# Aegis-AV

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
apps/backend-api/: README.md
apps/desktop-ui/: README.md  (+5 more)
core/quarantine/: Cargo.toml
core/quarantine/src/: lib.rs
core/scanner/: Cargo.toml
core/scanner/src/: engine.rs  hashing.rs  heuristics.rs  lib.rs  main.rs  profiles.rs  signatures.rs  types.rs
core/scanner/tests/: scanner_tests.rs
core/scanner/tests/fixtures/: README.md
core/security-core/: Cargo.toml
core/security-core/src/: aegis_core.rs  ai_assist.rs  ai_ops.rs  assistant.rs  automation.rs  behavior.rs  brand.rs  cloud_sync.rs  developer_ecosystem.rs  diagnostics.rs  distributed.rs  ecosystem.rs  enterprise.rs  event_bus.rs  false_positive.rs  firewall.rs  incident.rs  knowledge_base.rs  lib.rs  logging.rs  marketplace.rs  module_system.rs  notifications.rs  observability.rs  ops_dashboard.rs  orchestration.rs  performance.rs  platform.rs  plugin_system.rs  policies.rs  power_tools.rs  premium_experience.rs  process_tree.rs  protection_layers.rs  ransomware.rs  reputation.rs  risk_intelligence.rs  sandbox.rs  scoring.rs  self_protection.rs  (+10 more)
docs/: AEGIS_OS_CORE.md  AI_OPERATIONS_LAYER.md  AI_SECURITY_ASSISTANT.md  AUTOMATION_ENGINE.md  BRAND_IDENTITY.md  CROSS_PLATFORM.md  DEVELOPER_ECOSYSTEM.md  DEVELOPMENT.md  DISTRIBUTED_ARCHITECTURE.md  EVENT_BUS.md  LOCAL_GUARD_AGENT.md  LONG_TERM_EVOLUTION.md  MARKETPLACE.md  ORCHESTRATION_ENGINE.md  PHASE_3_OPERATIONS.md  PHASE_5_MATURITY.md  PHASE_6_AEGIS_OS.md  PLUGIN_SDK.md  PRODUCTION_READINESS.md  RELIABILITY_ENGINEERING.md  RISK_INTELLIGENCE.md  SAFE_TESTING.md  SYSTEM_GRAPH.md  THREAT_HANDLING.md  UI_DESIGN_SYSTEM.md  VISUAL_INTELLIGENCE.md  WORKSPACE_SYSTEM.md
installers/: README.md
release/: CHANGELOG.md  release-manifest.example.json
scripts/: build-release.ps1  launch-aegis-desktop.ps1
tests/: README.md
(+61 files in other folders)
