[workspace]
members = [
  "core/scanner",
  "core/agent",
  "core/updater",
  "core/quarantine",
  "core/security-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["AegisAV Contributors"]
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
walkdir = "2.5"
