[package]
name = "aegis-quarantine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "aegis_quarantine"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
