[package]
name = "aegis-security-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "aegis_security_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
